Redo Rest Template